--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -96,6 +96,11 @@ de:
               no_body_generic: "Schreiben Sie bitte einen Kommentar, um die Konversation zu beginnen."
             name: 
               no_title: "Bitte vergeben Sie einen Titel für die Konversation"
+      template: 
+        body: "Bitte überprüfen Sie die folgenden Felder:"
+        header: 
+          one: "Konnte %{model} nicht speichern: ein Fehler."
+          other: "Konnte %{model} nicht speichern: %{count} Fehler."
     models: 
       address: Adresse
       card: Karte
@@ -220,7 +225,6 @@ de:
     index: 
       rss: 
         description: "Konversationen für Projekt %{name}"
-        title: Konversationen
     link: 
       edit: Bearbeiten
     new: 
@@ -249,6 +253,265 @@ de:
       invite_users: "Sie sind der einzige Benutzer in diesem Projekt!"
       no_users_yet: "Konversationen sind nützlicher wenn sie geteilt werden. <a href='%{invite_link}'>Laden Sie Benutzer ein</a> zu diesem Projekt, so dass sie diese Konversation lesen können, Antworten senden können und Aktualisierungen erhalten."
       subscribe_note: "Diese Teilnehmer werden über diese Nachricht und alle folgenden Kommentare per Email informiert.<br/> Sie können die Benachrichtigung jederzeit abbestellen."
+  countries: 
+    AC: Ascension
+    AD: Andorra
+    AE: "Vereinigte Arabische Emirate"
+    AF: Afghanistan
+    AG: "Antigua und Barbuda"
+    AI: Anguilla
+    AL: Albanien
+    AM: Armenien
+    AN: "Niederländische Antillen"
+    AO: Angola
+    AQ: Antarktis
+    AR: Argentinien
+    AS: Amerikanisch-Samoa
+    AT: Österreich
+    AU: Australien
+    AW: Aruba
+    AX: Alandinseln
+    AZ: Aserbaidschan
+    BA: "Bosnien u. Herzegowina"
+    BB: Barbados
+    BD: Bangladesch
+    BE: Belgien
+    BF: "Burkina Faso"
+    BG: Bulgarien
+    BH: Bahrain
+    BI: Burundi
+    BJ: Benin
+    BL: "St. Barthélemy"
+    BM: Bermuda
+    BN: "Brunei Darussalam"
+    BO: Bolivien
+    BR: Brasilien
+    BS: Bahamas
+    BT: Bhutan
+    BV: Bouvetinsel
+    BW: Botsuana
+    BY: Belarus
+    BZ: Belize
+    CA: Kanada
+    CC: Kokosinseln
+    CD: "Demokratische Republik Kongod"
+    CF: "Zentralafrikanische Republik"
+    CG: Kongo-Brazzavilled
+    CH: Schweiz
+    CI: Elfenbeinküste
+    CK: Cookinseln
+    CL: Chile
+    CM: Kamerun
+    CN: China
+    CO: Kolumbien
+    CP: Clipperton
+    CR: "Costa Rica"
+    CS: "Serbien und Montenegro"
+    CU: Kuba
+    CV: "Kap Verde"
+    CX: Weihnachtsinsel
+    CY: Zypern
+    CZ: "Tschechische Republik"
+    DE: Deutschland
+    DG: "Diego Garcia"
+    DJ: Dschibuti
+    DK: Dänemark
+    DM: Dominica
+    DO: "Dominikanische Republik"
+    DZ: Algerien
+    EA: "Ceuta und Melilla"
+    EC: Ecuador
+    EE: Estland
+    EG: Ägypten
+    EH: Westsahara
+    ER: Eritrea
+    ES: Spanien
+    ET: Äthiopien
+    EU: EU
+    FI: Finnland
+    FJ: Fidschi
+    FK: Falklandinseln
+    FM: Mikronesien
+    FO: Färöer
+    FR: Frankreich
+    FX: Metropolitan-Frankreich
+    GA: Gabun
+    GB: "Vereinigtes Königreich"
+    GD: Grenada
+    GE: Georgien
+    GF: Französisch-Guayana
+    GG: Guernsey
+    GH: Ghana
+    GI: Gibraltar
+    GL: Grönland
+    GM: Gambia
+    GN: Guinea
+    GP: Guadeloupe
+    GQ: Äquatorialguinea
+    GR: Griechenland
+    GS: "Südgeorgien und die Südlichen Sandwichinseln"
+    GT: Guatemala
+    GU: Guam
+    GW: Guinea-Bissau
+    GY: Guyana
+    HK: Hongkong
+    HM: "Heard- und McDonald-Inseln"
+    HN: Honduras
+    HR: Kroatien
+    HT: Haiti
+    HU: Ungarn
+    IC: "Kanarische Inseln"
+    ID: Indonesien
+    IE: Irland
+    IL: Israel
+    IM: "Isle of Man"
+    IN: Indien
+    IO: "Britisches Territorium im Indischen Ozean"
+    IQ: Irak
+    IR: Iran
+    IS: Island
+    IT: Italien
+    JE: Jersey
+    JM: Jamaika
+    JO: Jordanien
+    JP: Japan
+    KE: Kenia
+    KG: Kirgisistan
+    KH: Kambodscha
+    KI: Kiribati
+    KM: Komoren
+    KN: "St. Kitts und Nevis"
+    KP: Nordkorea
+    KR: "Republik Korea"
+    KW: Kuwait
+    KY: Kaimaninseln
+    KZ: Kasachstan
+    LA: Laos
+    LB: Libanon
+    LC: "St. Lucia"
+    LI: Liechtenstein
+    LK: "Sri Lanka"
+    LR: Liberia
+    LS: Lesotho
+    LT: Litauen
+    LU: Luxemburg
+    LV: Lettland
+    LY: Libyen
+    MA: Marokko
+    MC: Monaco
+    MD: "Republik Moldau"
+    ME: Montenegro
+    MF: "St. Martin"
+    MG: Madagaskar
+    MH: Marshallinseln
+    MK: "Mazedonien [EJR]d"
+    ML: Mali
+    MM: Myanmar
+    MN: Mongolei
+    MO: Macaud
+    MP: "Nördliche Marianen"
+    MQ: Martinique
+    MR: Mauretanien
+    MS: Montserrat
+    MT: Malta
+    MU: Mauritius
+    MV: Malediven
+    MW: Malawi
+    MX: Mexiko
+    MY: Malaysia
+    MZ: Mosambik
+    NA: Namibia
+    NC: Neukaledonien
+    NE: Niger
+    NF: Norfolkinsel
+    NG: Nigeria
+    NI: Nicaragua
+    NL: Niederlande
+    ? "NO"
+    : Norwegen
+    NP: Nepal
+    NR: Nauru
+    NU: Niue
+    NZ: Neuseeland
+    OM: Oman
+    PA: Panama
+    PE: Peru
+    PF: Französisch-Polynesien
+    PG: Papua-Neuguinea
+    PH: Philippinen
+    PK: Pakistan
+    PL: Polen
+    PM: "St. Pierre und Miquelon"
+    PN: Pitcairn
+    PR: "Puerto Rico"
+    PS: "Palästinensische Autonomiegebiete"
+    PT: Portugal
+    PW: Palau
+    PY: Paraguay
+    QA: Katar
+    QO: "Äußeres Ozeanien"
+    RE: Réunion
+    RO: Rumänien
+    RS: Serbien
+    RU: "Russische Föderation"
+    RW: Ruanda
+    SA: Saudi-Arabien
+    SB: Salomonen
+    SC: Seychellen
+    SD: Sudan
+    SE: Schweden
+    SG: Singapur
+    SH: "St. Helena"
+    SI: Slowenien
+    SJ: "Svalbard und Jan Mayen"
+    SK: Slowakei
+    SL: "Sierra Leone"
+    SM: "San Marino"
+    SN: Senegal
+    SO: Somalia
+    SR: Suriname
+    ST: "São Tomé und Príncipe"
+    SV: "El Salvador"
+    SY: Syrien
+    SZ: Swasiland
+    TA: "Tristan da Cunha"
+    TC: "Turks- und Caicosinseln"
+    TD: Tschad
+    TF: "Französische Süd- und Antarktisgebiete"
+    TG: Togo
+    TH: Thailand
+    TJ: Tadschikistan
+    TK: Tokelau
+    TL: Osttimor
+    TM: Turkmenistan
+    TN: Tunesien
+    TO: Tonga
+    TR: Türkei
+    TT: "Trinidad und Tobago"
+    TV: Tuvalu
+    TW: Taiwan
+    TZ: Tansania
+    UA: Ukraine
+    UG: Uganda
+    UM: "United States Minor Outlying Islands"
+    US: "Vereinigte Staaten"
+    UY: Uruguay
+    UZ: Usbekistan
+    VA: Vatikanstadt
+    VC: "St. Vincent und die Grenadinen"
+    VE: Venezuela
+    VG: "Britische Jungferninseln"
+    VI: "Amerikanische Jungferninseln"
+    VN: Vietnam
+    VU: Vanuatu
+    WF: "Wallis und Futuna"
+    WS: Samoa
+    YE: Jemen
+    YT: Mayotte
+    ZA: Südafrika
+    ZM: Sambia
+    ZW: Simbabwe
+    ZZ: "Unbekannte oder ungültige Region"
   date: 
     abbr_day_names: 
       - Son
@@ -314,6 +577,9 @@ de:
       about_x_years: 
         one: "circa 1 Jahr"
         other: "circa %{count} Jahre"
+      almost_x_years: 
+        one: "fast ein Jahr"
+        other: "fast %{count} Jahre"
       half_a_minute: "halbe Minute"
       less_than_x_minutes: 
         one: "weniger als 1 Minute"
@@ -535,65 +801,27 @@ de:
       title: Titel
     new: 
       submit: "Notiz hinzufügen"
-
-  number:
-    # Used in number_with_delimiter()
-    # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
-    format:
-      # Sets the separator between the units, for more precision (e.g. 1.0 / 2.0 == 0.5)
-      separator: "."
-      # Delimets thousands (e.g. 1,000,000 is a million) (always in groups of three)
-      delimiter: ","
-      # Number of decimals, behind the separator (the number 1 with a precision of 2 gives: 1.00)
-      precision: 3
-
-    # Used in number_to_currency()
-    currency:
-      format:
-        # Where is the currency sign? %u is the currency unit, %n the number (default: $5.00)
-        format: "%u%n"
-        unit: "$"
-        # These three are to override number.format and are optional
-        separator: "."
+  number: 
+    currency: 
+      format: 
         delimiter: ","
-        precision: 2
-
-    # Used in number_to_percentage()
-    percentage:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        # precision:
-
-    # Used in number_to_precision()
-    precision:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        # precision:
-
-    # Used in number_to_human_size()
-    human:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        precision: 1
-      storage_units:
-        # Storage units output formatting.
-        # %u is the storage unit, %n is the number (default: 2 MB)
+        format: "%u%n"
+        separator: "."
+        unit: $
+    format: 
+      delimiter: ","
+      separator: "."
+    human: 
+      storage_units: 
         format: "%n %u"
-        units:
-          byte:
-            one: "byte"
-            other: "bytes"
-          kb: "KB"
-          mb: "MB"
-          gb: "GB"
-          tb: "TB"
-
+        units: 
+          byte: 
+            one: byte
+            other: bytes
+          gb: GB
+          kb: KB
+          mb: MB
+          tb: TB
   page_title: 
     archived_task_lists: "Archivierte Aufgaben"
     create_uploads: "Datei hochladen"
@@ -634,7 +862,6 @@ de:
       pages_in_this_project: "Seiten in diesem Projekt"
       rss: 
         description: "Seiten im Projekt %{name}"
-        title: Seiten
     new: 
       define1: "Hier können Sie <b>nützliche Informationen mitteilen</b> für Ihr Team: Eine Roadmap, interessante Links, Anleitungen, Email Vorlagen..."
       define2: "Eine Seite zu bearbeiten ist sehr einfach, mit Drag-and-Drop können Sie Elemente genau platzieren."
@@ -1084,7 +1311,6 @@ de:
       no_public_signup: "Public signup wird vom System leider nicht unterstützt."
       submit: "Benutzerkonto erstellen"
       title: "Erstellen eines Benutzerkontos"
-      you_already_have_an_account: "Sie haben bereits ein Konto für die Email-Adresse %{email}. Melden Sie sich mit dieser Email-Adresse an oder setzen Sie Ihr Passwort zurück, falls Sie es vergessen haben."
       you_are_logged_in: "Sie haben bereits ein Benutzerkonto. Melden Sie sich ab, um sich als anderer Benutzer anzumelden."
     show: 
       pending_invite: "%{name} wurde bereits zu einem Ihrer Projekte eingeladen. Sie können nicht auf die Informationen zugreifen, bevor die Einladung akzeptiert wurde."
