--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -100,6 +100,9 @@ es:
               no_title: "Esta conversación necesita un título"
       template: 
         body: "Hubo problemas con los atributos siguientes:"
+        header: 
+          one: "No se pudo guardar este/a %{model} porque se encontró 1 error"
+          other: "No se pudo guardar este/a %{model} porque se encontraron %{count} errores"
     models: 
       address: Dirección
       card: Tarjeta
@@ -260,7 +263,6 @@ es:
     index: 
       rss: 
         description: "Conversaciones en el proyecto %{name}"
-        title: Conversaciones
     link: 
       edit: Editar
     new: 
@@ -289,6 +291,265 @@ es:
       invite_users: "Eres el único usuario en este proyecto!"
       no_users_yet: "Conversar es más útil cuando no lo haces solo. <a href='%{invite_link}'>Invita a algunos usuarios</a> a este proyecto para que puedan leer, comentar y recibir actualizaciones de esta conversación."
       subscribe_note: "Estas personas serán notificadas via email de este mensaje y los comentarios posteriores.<br/>Pueden dejar de seguir la conversación en cualquier momento."
+  countries: 
+    AC: "Isla de la Ascensión"
+    AD: Andorra
+    AE: "Emiratos Árabes Unidos"
+    AF: Afganistán
+    AG: "Antigua y Barbuda"
+    AI: Anguila
+    AL: Albania
+    AM: Armenia
+    AN: "Antillas Neerlandesas"
+    AO: Angola
+    AQ: Antártida
+    AR: Argentina
+    AS: "Samoa Americana"
+    AT: Austria
+    AU: Australia
+    AW: Aruba
+    AX: "Islas Åland"
+    AZ: Azerbaiyán
+    BA: Bosnia-Herzegovina
+    BB: Barbados
+    BD: Bangladesh
+    BE: Bélgica
+    BF: "Burkina Faso"
+    BG: Bulgaria
+    BH: BahréinR042
+    BI: Burundi
+    BJ: Benín
+    BL: "San Bartolomé"
+    BM: Bermudas
+    BN: Brunéi
+    BO: Bolivia
+    BR: Brasil
+    BS: Bahamas
+    BT: Bután
+    BV: "Isla Bouvet"
+    BW: Botsuana
+    BY: Bielorrusia
+    BZ: Belice
+    CA: Canadá
+    CC: "Islas Cocos"
+    CD: "Congo [República Democrática del Congo]"
+    CF: "República Centroafricana"
+    CG: "Congo [República]"
+    CH: Suiza
+    CI: "Costa de Marfil"
+    CK: "Islas Cook"
+    CL: Chile
+    CM: Camerún
+    CN: China
+    CO: Colombia
+    CP: "Isla Clipperton"
+    CR: "Costa Rica"
+    CS: "Serbia y Montenegro"
+    CU: Cuba
+    CV: "Cabo Verde"
+    CX: "Isla Christmas"
+    CY: Chipre
+    CZ: "República Checa"
+    DE: Alemania
+    DG: "Diego García"
+    DJ: Yibuti
+    DK: Dinamarca
+    DM: Dominica
+    DO: "República Dominicana"
+    DZ: Argelia
+    EA: "Ceuta y Melilla"
+    EC: Ecuador
+    EE: Estonia
+    EG: Egipto
+    EH: "Sáhara Occidental"
+    ER: Eritrea
+    ES: España
+    ET: Etiopía
+    EU: "Unión Europea"
+    FI: Finlandia
+    FJ: Fiyi
+    FK: "Islas Malvinas [Islas Falkland]"
+    FM: Micronesia
+    FO: "Islas Feroe"
+    FR: Francia
+    FX: "Francia metropolitanad"
+    GA: Gabón
+    GB: "Reino Unido"
+    GD: Granada
+    GE: Georgia
+    GF: "Guayana Francesa"
+    GG: Guernsey
+    GH: Ghana
+    GI: Gibraltar
+    GL: Groenlandia
+    GM: Gambia
+    GN: Guinea
+    GP: Guadalupe
+    GQ: "Guinea Ecuatorial"
+    GR: Grecia
+    GS: "Islas Georgia del Sur y Sandwich del Sur"
+    GT: Guatemala
+    GU: Guam
+    GW: Guinea-Bissau
+    GY: Guyana
+    HK: "Hong Kong"
+    HM: "Islas Heard y McDonald"
+    HN: Honduras
+    HR: Croacia
+    HT: Haití
+    HU: Hungría
+    IC: "Islas Canarias"
+    ID: Indonesia
+    IE: Irlanda
+    IL: Israel
+    IM: "Isla de Man"
+    IN: India
+    IO: "Territorio Británico del Océano ÍndicoR042"
+    IQ: Iraq
+    IR: Irán
+    IS: Islandia
+    IT: Italia
+    JE: Jersey
+    JM: Jamaica
+    JO: Jordania
+    JP: Japón
+    KE: Kenia
+    KG: KirguistánR042
+    KH: Camboya
+    KI: Kiribati
+    KM: Comoras
+    KN: "San Cristóbal y Nieves"
+    KP: "Corea del Norte"
+    KR: "Corea del Sur"
+    KW: Kuwait
+    KY: "Islas Caimán"
+    KZ: Kazajistán
+    LA: Laos
+    LB: Líbano
+    LC: "Santa Lucía"
+    LI: Liechtenstein
+    LK: "Sri Lanka"
+    LR: Liberia
+    LS: Lesoto
+    LT: Lituania
+    LU: Luxemburgo
+    LV: Letonia
+    LY: Libia
+    MA: Marruecos
+    MC: Mónaco
+    MD: MoldaviaR039
+    ME: Montenegro
+    MF: "San Martín"
+    MG: Madagascar
+    MH: "Islas Marshall"
+    MK: "Macedonia [ERYM]"
+    ML: Mali
+    MM: "Myanmar [Birmania]"
+    MN: Mongolia
+    MO: Macao
+    MP: "Islas Marianas del Norte"
+    MQ: Martinica
+    MR: Mauritania
+    MS: Montserrat
+    MT: Malta
+    MU: Mauricio
+    MV: Maldivas
+    MW: Malaui
+    MX: México
+    MY: Malasia
+    MZ: Mozambique
+    NA: Namibia
+    NC: "Nueva Caledonia"
+    NE: Níger
+    NF: "Isla Norfolk"
+    NG: Nigeria
+    NI: Nicaragua
+    NL: "Países Bajos"
+    ? "NO"
+    : Noruega
+    NP: Nepal
+    NR: Nauru
+    NU: "Isla Niue"
+    NZ: "Nueva Zelanda"
+    OM: Omán
+    PA: Panamá
+    PE: Perú
+    PF: "Polinesia Francesa"
+    PG: "Papúa Nueva Guinea"
+    PH: Filipinas
+    PK: Pakistán
+    PL: Polonia
+    PM: "San Pedro y Miquelón"
+    PN: Pitcairn
+    PR: "Puerto Rico"
+    PS: "Territorios Palestinos"
+    PT: Portugal
+    PW: Palau
+    PY: Paraguay
+    QA: Qatar
+    QO: "Territorios alejados de Oceanía"
+    RE: Reunión
+    RO: Rumanía
+    RS: Serbia
+    RU: Rusia
+    RW: Ruanda
+    SA: "Arabia Saudí"
+    SB: "Islas Salomón"
+    SC: Seychelles
+    SD: Sudán
+    SE: Suecia
+    SG: Singapur
+    SH: "Santa Elena"
+    SI: Eslovenia
+    SJ: "Svalbard y Jan Mayen"
+    SK: Eslovaquia
+    SL: "Sierra Leona"
+    SM: "San Marino"
+    SN: Senegal
+    SO: Somalia
+    SR: SurinamR042
+    ST: "Santo Tomé y Príncipe"
+    SV: "El Salvador"
+    SY: Siria
+    SZ: Suazilandia
+    TA: "Tristán da Cunha"
+    TC: "Islas Turcas y Caicos"
+    TD: Chad
+    TF: "Territorios Australes Franceses"
+    TG: Togo
+    TH: Tailandia
+    TJ: Tayikistán
+    TK: Tokelau
+    TL: "Timor Oriental"
+    TM: Turkmenistán
+    TN: Túnez
+    TO: Tonga
+    TR: Turquía
+    TT: "Trinidad y Tobago"
+    TV: Tuvalu
+    TW: Taiwán
+    TZ: Tanzania
+    UA: Ucrania
+    UG: Uganda
+    UM: "Islas menores alejadas de los Estados Unidos"
+    US: "Estados Unidos"
+    UY: Uruguay
+    UZ: Uzbekistán
+    VA: "Ciudad del Vaticano"
+    VC: "San Vicente y las Granadinas"
+    VE: Venezuela
+    VG: "Islas Vírgenes Británicas"
+    VI: "Islas Vírgenes de los Estados Unidos"
+    VN: Vietnam
+    VU: Vanuatu
+    WF: "Wallis y Futuna"
+    WS: Samoa
+    YE: Yemen
+    YT: Mayotte
+    ZA: Sudáfrica
+    ZM: Zambia
+    ZW: Zimbabue
+    ZZ: "Región desconocida o no válida"
   date: 
     abbr_day_names: 
       - Dom
@@ -354,6 +615,9 @@ es:
       about_x_years: 
         one: "alrededor de 1 año"
         other: "alrededor de %{count} años"
+      almost_x_years: 
+        one: "casi 1 año"
+        other: "casi %{count} años"
       half_a_minute: "medio minuto"
       less_than_x_minutes: 
         one: "menos de 1 minuto"
@@ -587,65 +851,27 @@ es:
       title: Título
     new: 
       submit: "Nueva nota"
-
-  number:
-    # Used in number_with_delimiter()
-    # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
-    format:
-      # Sets the separator between the units, for more precision (e.g. 1.0 / 2.0 == 0.5)
-      separator: "."
-      # Delimets thousands (e.g. 1,000,000 is a million) (always in groups of three)
-      delimiter: ","
-      # Number of decimals, behind the separator (the number 1 with a precision of 2 gives: 1.00)
-      precision: 3
-
-    # Used in number_to_currency()
-    currency:
-      format:
-        # Where is the currency sign? %u is the currency unit, %n the number (default: $5.00)
-        format: "%u%n"
-        unit: "$"
-        # These three are to override number.format and are optional
-        separator: "."
+  number: 
+    currency: 
+      format: 
         delimiter: ","
-        precision: 2
-
-    # Used in number_to_percentage()
-    percentage:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        # precision:
-
-    # Used in number_to_precision()
-    precision:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        # precision:
-
-    # Used in number_to_human_size()
-    human:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        precision: 1
-      storage_units:
-        # Storage units output formatting.
-        # %u is the storage unit, %n is the number (default: 2 MB)
+        format: "%u%n"
+        separator: "."
+        unit: $
+    format: 
+      delimiter: ","
+      separator: "."
+    human: 
+      storage_units: 
         format: "%n %u"
-        units:
-          byte:
-            one: "byte"
-            other: "bytes"
-          kb: "KB"
-          mb: "MB"
-          gb: "GB"
-          tb: "TB"
-
+        units: 
+          byte: 
+            one: byte
+            other: bytes
+          gb: GB
+          kb: KB
+          mb: MB
+          tb: TB
   page_title: 
     archived_task_lists: "Tareas archivadas"
     create_uploads: "Subir archivo"
@@ -687,7 +913,6 @@ es:
       pages_in_this_project: "Páginas en este proyecto"
       rss: 
         description: "Páginas del proyecto %{name}"
-        title: Páginas
     new: 
       define1: "Aquí puedes <b>compartir información de uso frecuente</b> con tu equipo: Un roadmap, links útiles, instrucciones, plantillas de emails..."
       define2: "Editar una página es sencillo y divertido, con elementos arrastrables que puedes editar en el sitio."
