--- a/config/locales/pt.yml
+++ b/config/locales/pt.yml
@@ -96,6 +96,11 @@ pt:
               no_body_generic: "Digite um texto para iniciar a conversa."
             name: 
               no_title: "Esta conversa precisa de um título"
+      template: 
+        body: "Por favor, verifique o(s) seguinte(s) campo(s):"
+        header: 
+          one: "Não foi possível gravar %{model}: 1 erro"
+          other: "Não foi possível gravar %{model}: %{count} erros."
     models: 
       address: Endereço
       card: Cartão
@@ -256,7 +261,6 @@ pt:
     index: 
       rss: 
         description: "Conversas no projeto %{name}"
-        title: Conversas
     link: 
       edit: Editar
     new: 
@@ -286,6 +290,264 @@ pt:
       no_users_yet: "Conversar es más útil cuando no lo haces solo. <a href='%{invite_link}'>Invita a algunos usuarios</a> a este proyecto para que puedan leer, comentar y recibir actualizaciones de esta conversación."
       people_all: "Todas as pessõas no projeto"
       subscribe_note: "Estas persoas serão notificadas via email deste mensagem e os seguintes comentários.<br/>Podem deixar de seguir a conversa a qualquer momento."
+  countries: 
+    AC: "Ilha de Ascensão"
+    AD: Andorra
+    AE: "Emirados Árabes Unidos"
+    AF: Afeganistão
+    AG: "Antígua e Barbuda"
+    AI: Anguilla
+    AL: Albânia
+    AM: Armênia
+    AN: "Antilhas Holandesas"
+    AO: Angola
+    AQ: Antártida
+    AR: Argentina
+    AS: "Samoa Americana"
+    AT: Áustria
+    AU: Austrália
+    AW: Aruba
+    AX: "Ilhas Aland"
+    AZ: Azerbaijão
+    BA: Bósnia-Herzegovina
+    BB: Barbados
+    BD: Bangladesh
+    BE: Bélgica
+    BF: "Burquina Faso"
+    BG: Bulgária
+    BH: Bahrain
+    BI: Burundi
+    BJ: Benin
+    BL: "São Bartolomeu"
+    BM: Bermudas
+    BN: Brunei
+    BO: Bolívia
+    BR: Brasil
+    BS: Bahamas
+    BT: Butão
+    BV: "Ilha Bouvet"
+    BW: Botsuana
+    BY: Belarus
+    BZ: Belize
+    CA: Canadá
+    CC: "Ilhas Coco"
+    CD: "República Democrática do Congo"
+    CF: "República Centro-Africana"
+    CG: Congo
+    CH: Suíça
+    CI: "Costa do Marfimd"
+    CK: "Ilhas Cook"
+    CL: Chile
+    CM: "República dos Camarões"
+    CN: China
+    CO: Colômbia
+    CP: "Ilha de Clipperton"
+    CR: "Costa Rica"
+    CS: "Sérvia e Montenegro"
+    CU: Cuba
+    CV: "Cabo Verde"
+    CX: "Ilhas Natal"
+    CY: Chipre
+    CZ: "República Tcheca"
+    DE: Alemanha
+    DG: "Diego Garcia"
+    DJ: Djibuti
+    DK: Dinamarca
+    DM: Dominica
+    DO: "República Dominicana"
+    DZ: Argélia
+    EA: "Ceuta e Melilha"
+    EC: Equador
+    EE: Estônia
+    EG: Egito
+    EH: "Saara Ocidental"
+    ER: Eritreia
+    ES: Espanha
+    ET: Etiópia
+    EU: "União Europeia"
+    FI: Finlândia
+    FJ: Fiji
+    FK: "Ilhas Malvinas"
+    FM: Micronésia
+    FO: "Ilhas Faroe"
+    FR: França
+    GA: Gabão
+    GB: "Reino Unido"
+    GD: Granada
+    GE: Geórgia
+    GF: "Guiana Francesa"
+    GG: Guernsey
+    GH: Gana
+    GI: Gibraltar
+    GL: Groênlandia
+    GM: Gâmbia
+    GN: Guiné
+    GP: Guadalupe
+    GQ: "Guiné Equatorial"
+    GR: Grécia
+    GS: "Geórgia do Sul e Ilhas Sandwich do Sul"
+    GT: Guatemala
+    GU: Guam
+    GW: "Guiné Bissau"
+    GY: Guiana
+    HK: "Hong Kong"
+    HM: "Ilha Heard e Ilhas McDonald"
+    HN: Honduras
+    HR: Croácia
+    HT: Haiti
+    HU: Hungria
+    IC: "Ilhas Canárias"
+    ID: Indonésia
+    IE: Irlanda
+    IL: Israel
+    IM: "Ilha de Man"
+    IN: Índia
+    IO: "Território Britânico do Oceano Índico"
+    IQ: Iraque
+    IR: Irã
+    IS: Islândia
+    IT: Itália
+    JE: Jersey
+    JM: Jamaica
+    JO: Jordânia
+    JP: Japão
+    KE: Quênia
+    KG: Quirguistão
+    KH: Camboja
+    KI: Quiribati
+    KM: Comores
+    KN: "São Cristovão e Nevis"
+    KP: "Coreia do Norte"
+    KR: "Coreia do Sul"
+    KW: Kuwait
+    KY: "Ilhas Caiman"
+    KZ: Casaquistão
+    LA: "República Popular Democrática do Laos"
+    LB: Líbano
+    LC: "Santa Lúcia"
+    LI: Liechtenstein
+    LK: "Sri Lanka"
+    LR: Libéria
+    LS: Lesoto
+    LT: Lituânia
+    LU: Luxemburgo
+    LV: Letônia
+    LY: Líbia
+    MA: Marrocos
+    MC: Mônaco
+    MD: Moldávia
+    ME: Montenegro
+    MF: "São Martinho"
+    MG: Madagascar
+    MH: "Ilhas Marshall"
+    MK: "Macedônia [Antiga República Iugoslava da Macedônia - ARIM]"
+    ML: Mali
+    MM: "Mianmar [Birmânia]"
+    MN: Mongólia
+    MO: Macau
+    MP: "Ilhas Marianas do Norte"
+    MQ: Martinica
+    MR: Mauritânia
+    MS: Montserrat
+    MT: Malta
+    MU: Maurício
+    MV: Maldivas
+    MW: Malawi
+    MX: México
+    MY: Malásia
+    MZ: Moçambique
+    NA: Namíbia
+    NC: "Nova Caledônia"
+    NE: Níger
+    NF: "Ilha Norfolk"
+    NG: Nigéria
+    NI: Nicarágua
+    NL: Holanda
+    ? "NO"
+    : Noruega
+    NP: Nepal
+    NR: Nauru
+    NU: Niue
+    NZ: "Nova Zelândia"
+    OM: Omã
+    PA: Panamá
+    PE: Peru
+    PF: "Polinésia Francesa"
+    PG: "Papua-Nova Guiné"
+    PH: Filipinas
+    PK: Paquistão
+    PL: Polônia
+    PM: "Saint Pierre e Miquelon"
+    PN: Pitcairn
+    PR: "Porto Rico"
+    PS: "Territórios palestinos"
+    PT: Portugal
+    PW: Palau
+    PY: Paraguai
+    QA: Catar
+    QO: "Oceania Remota"
+    RE: Reunião
+    RO: Romênia
+    RS: Sérvia
+    RU: Rússia
+    RW: Ruanda
+    SA: "Arábia Saudita"
+    SB: "Ilhas Salomão"
+    SC: Seychelles
+    SD: Sudão
+    SE: Suécia
+    SG: Cingapura
+    SH: "Santa Helena"
+    SI: Eslovênia
+    SJ: "Svalbard e Jan Mayen"
+    SK: Eslováquia
+    SL: "Serra Leoa"
+    SM: "San Marino"
+    SN: Senegal
+    SO: Somália
+    SR: Suriname
+    ST: "São Tomé e Príncipe"
+    SV: "El Salvador"
+    SY: Síria
+    SZ: Suazilândia
+    TA: "Tristão da Cunha"
+    TC: "Ilhas Turks e Caicos"
+    TD: Chade
+    TF: "Territórios Franceses do Sul"
+    TG: Togo
+    TH: Tailândia
+    TJ: Tadjiquistão
+    TK: Tokelau
+    TL: Timor-Leste
+    TM: Turcomenistão
+    TN: Tunísia
+    TO: Tonga
+    TR: Turquia
+    TT: "Trinidad e Tobago"
+    TV: Tuvalu
+    TW: Taiwan
+    TZ: Tanzânia
+    UA: Ucrânia
+    UG: Uganda
+    UM: "Ilhas Menores Distantes dos Estados Unidos"
+    US: "Estados Unidos"
+    UY: Uruguai
+    UZ: Uzbequistão
+    VA: Vaticano
+    VC: "São Vicente e Granadinas"
+    VE: Venezuela
+    VG: "Ilhas Virgens Britânicas"
+    VI: "Ilhas Virgens dos EUA"
+    VN: Vietnã
+    VU: Vanuatu
+    WF: "Wallis e Futuna"
+    WS: Samoa
+    YE: Iêmen
+    YT: Mayotte
+    ZA: "África do Sul"
+    ZM: Zâmbia
+    ZW: Zimbábue
+    ZZ: "Região desconhecida ou inválida"
   date: 
     abbr_day_names: 
       - Dom
@@ -351,6 +613,9 @@ pt:
       about_x_years: 
         one: "cerca de 1 ano"
         other: "cerca de %{count} anos"
+      almost_x_years: 
+        one: "quase 1 ano"
+        other: "quase %{count} anos"
       half_a_minute: "meio minuto"
       less_than_x_minutes: 
         one: "menos de 1 minuto"
@@ -584,65 +849,27 @@ pt:
       title: Título
     new: 
       submit: "Nova nota"
-
-  number:
-    # Used in number_with_delimiter()
-    # These are also the defaults for 'currency', 'percentage', 'precision', and 'human'
-    format:
-      # Sets the separator between the units, for more precision (e.g. 1.0 / 2.0 == 0.5)
-      separator: "."
-      # Delimets thousands (e.g. 1,000,000 is a million) (always in groups of three)
-      delimiter: ","
-      # Number of decimals, behind the separator (the number 1 with a precision of 2 gives: 1.00)
-      precision: 3
-
-    # Used in number_to_currency()
-    currency:
-      format:
-        # Where is the currency sign? %u is the currency unit, %n the number (default: $5.00)
-        format: "%u%n"
-        unit: "$"
-        # These three are to override number.format and are optional
-        separator: "."
+  number: 
+    currency: 
+      format: 
         delimiter: ","
-        precision: 2
-
-    # Used in number_to_percentage()
-    percentage:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        # precision:
-
-    # Used in number_to_precision()
-    precision:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        # precision:
-
-    # Used in number_to_human_size()
-    human:
-      format:
-        # These three are to override number.format and are optional
-        # separator:
-        delimiter: ""
-        precision: 1
-      storage_units:
-        # Storage units output formatting.
-        # %u is the storage unit, %n is the number (default: 2 MB)
+        format: "%u%n"
+        separator: "."
+        unit: $
+    format: 
+      delimiter: ","
+      separator: "."
+    human: 
+      storage_units: 
         format: "%n %u"
-        units:
-          byte:
-            one: "byte"
-            other: "bytes"
-          kb: "KB"
-          mb: "MB"
-          gb: "GB"
-          tb: "TB"
-
+        units: 
+          byte: 
+            one: byte
+            other: bytes
+          gb: GB
+          kb: KB
+          mb: MB
+          tb: TB
   page_title: 
     archived_task_lists: "Tarefas arquivadas"
     create_uploads: "Subir arquivo"
@@ -684,7 +911,6 @@ pt:
       pages_in_this_project: "Páginas neste projeto"
       rss: 
         description: "Páginas do projeto %{name}"
-        title: Páginas
     new: 
       define1: "Aquí puedes <b>compartir información de uso frecuente</b> con tu equipo: Un roadmap, links útiles, instrucciones, plantillas de emails..."
       define2: "Editar una página es sencillo y divertido, con elementos arrastrables que puedes editar en el sitio."
@@ -740,8 +966,6 @@ pt:
       transfer: "Transferir el proyecto"
     link: 
       edit: Editar
-    update: 
-      success: "Modificado corretamente"
   projects: 
     edit: 
       change_owner: "Mudar propietário"
